--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,7 @@
             display: none;
             position: fixed;
             top: 80px;
-            right: 8px;
+            right: 10px;
             width: 320px;
             background-color: #fff;
             border-radius: 8px;
@@ -140,7 +140,7 @@
             color: #777;
         }
         .history-item button {
-            background-color: #FF0000;
+            background: linear-gradient(to right, #004d00, #00b300);
             color: #fff;
             border: 1px solid #ccc;
             padding: 5px 5px;
@@ -158,7 +158,7 @@
             color: #fff;
             border: none;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             margin-top: 10px;
         }
@@ -466,7 +466,7 @@
 
     <!-- Discover Section -->
     <div class="discover-container" id="discover-container">
-        <div class="discover-title">🔥 Trending</div>
+        <div class="discover-title">Discover</div>
         <div class="discover-scroll" id="discover-scroll"></div>
     </div>
 
