--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,7 @@
             color: #fff;
         }
         #search-bar {
-            flex: 0 1 150px;
+            flex: 0 1 100px;
             margin: 0 12px;            
             padding: 7px;
             background-color: #f1f1f1;
@@ -240,7 +240,7 @@
 
         /* Category Section */
         .category-container {
-            margin-top: 2px;
+            margin-top: 20px;
             padding: 2px;
         }
         .category-title {
@@ -429,12 +429,12 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 35px; /* Adjust size */
-    height: 35px;
+    width: 30px; /* Adjust size */
+    height: 30px;
     border-radius: 50%;
     background: linear-gradient(to right, #004d00, #00b300);
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
     text-decoration: none; /* Prevents default link styling */
     transition: background-color 0.3s ease; /* Smooth hover effect */
@@ -443,16 +443,218 @@
 .social-icon:hover {
     background-color: #555; /* Slightly lighter color on hover */
 }
-    </style>
+.notification-bar {
+            position: fixed;
+            bottom: 80px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            max-width: 400px;
+            background: linear-gradient(to right, #004d00, #00b300);
+            color: white;
+            padding: 10px;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+            z-index: 1000;
+        }
+        .notification-bar img {
+            width: 50px;
+            height: 50px;
+            border-radius: 8px;
+            margin-right: 10px;
+        }
+        .notification-text {
+            flex: 1;
+            font-size: 11px;
+            text-align: left;
+        }
+        .notification-button {
+            background: #ccff00;
+            color: #000;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+        }
+        .close-button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+            margin-left: 10px;
+        }
+        /* Sidebar Modal */
+.sidebar-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100%;
+    background-color: #fff;
+    border-right: 1px solid #ccc;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    overflow-y: auto;
+    padding: 10px;
+}
+
+.sidebar-modal.open {
+    display: block;
+}
+
+.sidebar-modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.sidebar-modal-header h3 {
+    font-size: 18px;
+    margin: 0;
+    color: #333;
+}
+
+.sidebar-modal-header button {
+    background: none;
+    border: none;
+    color: #333;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.sidebar-modal-header button:hover {
+    color: #007bff;
+}
+
+.sidebar-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.sidebar-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+}
+
+.sidebar-item img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.sidebar-item span {
+    font-size: 14px;
+    color: #333;
+}
+/* Bars Icon */
+.bars-icon {
+    font-size: 20px;
+    cursor: pointer;
+    color: #333;
+    margin-right: 1px;
+}
+
+.bars-icon:hover {
+    color: #00b300;
+}
+/* Logos Section */
+   .logos-container {
+       margin-top: 20px;
+       padding: 10px;
+   }
+   .logos-title {
+       font-size: 18px;
+       font-weight: bold;
+       margin-bottom: 10px;
+   }
+   .logos-scroll {
+       display: flex;
+       overflow-x: auto;
+       gap: 10px;
+       padding-bottom: 10px;
+   }
+   .logos-scroll::-webkit-scrollbar {
+       height: 8px;
+   }
+   .logos-scroll::-webkit-scrollbar-thumb {
+       background-color: #888;
+       border-radius: 4px;
+   }
+   .logos-scroll::-webkit-scrollbar-track {
+       background-color: #f1f1f1;
+   }
+   .logo-item {
+       flex: 0 0 auto;
+       width: 100px;
+       height: 100px;
+       background-color: #fff;
+       border-radius: 8px;
+       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+       overflow: hidden;
+       cursor: pointer;
+   }
+   .logo-item img {
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+   }
+</style>
 </head>
 <body>
     <header>
-        <div class="header-top">
-            <div class="logo">Hausa Novels</div>
-            <div class="history-icon" onclick="toggleHistoryModal()"><i class="fas fa-history"></i></div>
-            <input type="text" id="search-bar" placeholder=" Search..." oninput="handleSearch()" />
+    <div class="header-top">
+        <!-- Bars Icon -->
+        <div class="bars-icon" onclick="toggleSidebarModal()">
+            <i class="fas fa-bars"></i>
         </div>
-    </header>
+        <!-- Logo -->
+        <div class="logo">Hausa Novels</div>
+        <!-- History Icon -->
+        <div class="history-icon" onclick="toggleHistoryModal()">
+            <i class="fas fa-history"></i>
+        </div>
+        <!-- Search Bar -->
+        <input type="text" id="search-bar" placeholder=" Search..." oninput="handleSearch()" />
+    </div>
+</header>
+    
+    <!-- Sidebar Modal -->
+<div class="sidebar-modal" id="sidebar-modal">
+    <div class="sidebar-modal-header">
+        <h3>Menu</h3>
+        <button onclick="toggleSidebarModal()">✖</button>
+    </div>
+    <!-- Logos Section -->
+   <div class="logos-container">
+       <div class="logos-title">Our Partners</div>
+       <div class="logos-scroll" id="logos-scroll"></div>
+   </div>
+   
+    <div class="sidebar-list" id="sidebar-list">
+        <!-- URL Logos will be dynamically added here -->
+    </div>
+</div>
+    
+    <div class="notification-bar" id="notification-bar">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTslGS8WKA921cWsf4c_xYECCYQoSoToHcjo19yW9d_wXRLBQeU-nEEMwA&s=10" alt="App Logo">
+        <div class="notification-text">Enjoy more unparalleled Novels download Hausa Novels app.</div>
+        <button class="notification-button" onclick="window.open('https://ucarecdn.com/82947fa9-98e5-4948-89ec-8fedd32b4be4/', '_blank')">OPEN</button>
+        <button class="close-button" onclick="closeNotification()">✖</button>
+    </div>
 
     <!-- History Modal -->
     <div class="history-modal" id="history-modal">
@@ -500,6 +702,9 @@
             </a>
             <a href="https://www.instagram.com/username" target="_blank" class="social-icon">
                 <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UC123456" target="_blank" class="social-icon">
+                <i class="fab fa-youtube"></i>
             </a>
             <a href="https://wa.me/1234567890" target="_blank" class="social-icon">
                 <i class="fab fa-whatsapp"></i>
@@ -603,6 +808,85 @@
     }
 ];
 
+const logosData = [
+       { imgUrl: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIlQrAhJwP4oyweBiy8rHJngSeN7E2_gNWQjtqKDOiRQ&s", videoUrl: "https://darulfikr.com/" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/CumW3IY1mMg" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/SFtKVKoscqA" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/hJzZRl1C8X0" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/BjkncLAZu80" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/UPjyNg1mKAM" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/iTNyJse9fdk" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/siFLpeqOWDQ" },
+       { imgUrl: "https://via.placeholder.com/100", videoUrl: "https://youtube.com/embed/Ma9xquhYyT0" },
+   ];
+
+   const createLogosSection = () => {
+       const logosScroll = document.getElementById('logos-scroll');
+       logosScroll.innerHTML = '';
+
+       logosData.forEach(logo => {
+           const logoItem = document.createElement('div');
+           logoItem.className = 'logo-item';
+
+           const img = document.createElement('img');
+           img.src = logo.imgUrl;
+           img.alt = 'Logo';
+
+           logoItem.appendChild(img);
+           logosScroll.appendChild(logoItem);
+
+           // Add click event to open video
+           logoItem.onclick = () => {
+               document.getElementById('video-nav').style.display = 'flex';
+               document.getElementById('video-player').src = logo.videoUrl;
+           };
+       });
+   };
+
+   // Call the function to create the logos section
+   createLogosSection();
+
+// Function to toggle the sidebar modal
+const toggleSidebarModal = () => {
+    const sidebarModal = document.getElementById('sidebar-modal');
+    sidebarModal.classList.toggle('open');
+};
+
+// Function to populate the sidebar with URL logos
+const populateSidebar = () => {
+    const sidebarList = document.getElementById('sidebar-list');
+    sidebarList.innerHTML = '';
+
+    // Example list of URL logos (replace with your own data)
+    const urlLogos = [
+        { logoUrl: "https://bit.ly/3x9dviN", name: "Facebook", url: "https://facebook.com" },
+        { logoUrl: "https://bit.ly/3z5v6KJ", name: "Twitter", url: "https://twitter.com" },
+        { logoUrl: "https://bit.ly/3x7Vp7Y", name: "Instagram", url: "https://instagram.com" },
+        { logoUrl: "https://bit.ly/3z5v6KJ", name: "Telegram", url: "https://telegram.org" },
+        { logoUrl: "https://bit.ly/3x7Vp7Y", name: "WhatsApp", url: "https://whatsapp.com" },
+    ];
+
+    urlLogos.forEach(item => {
+        const sidebarItem = document.createElement('div');
+        sidebarItem.className = 'sidebar-item';
+        sidebarItem.onclick = () => window.open(item.url, '_blank');
+
+        const img = document.createElement('img');
+        img.src = item.logoUrl;
+        img.alt = item.name;
+
+        const span = document.createElement('span');
+        span.textContent = item.name;
+
+        sidebarItem.appendChild(img);
+        sidebarItem.appendChild(span);
+        sidebarList.appendChild(sidebarItem);
+    });
+};
+
+// Call the function to populate the sidebar on page load
+populateSidebar();
+
 // Function to shuffle an array
     const shuffleArray = (array) => {
         for (let i = array.length - 1; i > 0; i--) {
@@ -679,7 +963,7 @@ const createCategories = () => {
         categoryTitle.innerHTML = `
             <span>
                 ${category}
-                <i class="fas fa-arrow-right arrow-icon"></i> <!-- Right arrow icon -->
+                <i class="fas fa-chevron-right"></i> <!-- Right arrow icon -->
             </span>
             <button onclick="showAllVideos('${category}')">View All</button>
         `;
@@ -972,6 +1256,14 @@ setInterval(checkAndLockVideos, 800000);
 createDiscoverSection();
 createCategories();
 updateHistoryList();
+
+setTimeout(() => {
+            document.getElementById('notification-bar').style.opacity = '1';
+        }, 15000); // Show after 40 seconds
+
+        function closeNotification() {
+            document.getElementById('notification-bar').style.opacity = '0';
+        }
     </script>
 </body>
 </html>
