--- a/Index.html
+++ b/Index.html
@@ -240,11 +240,11 @@
 
         /* Category Section */
         .category-container {
-            margin-top: 20px;
+            margin-top: 2px;
             padding: 2px;
         }
         .category-title {
-            font-size: 18px;
+            font-size: 17px;
             font-weight: bold;
             margin-bottom: 15px;
             display: flex;
@@ -258,7 +258,7 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             cursor: pointer;
-            font-size: 15px;
+            font-size: 13px;
         }
         .category-title button:hover {
             background-color: #f0f0f0;
@@ -422,19 +422,19 @@
     display: flex;
     justify-content: center;
     gap: 15px;
-    margin: 20px 0;
+    margin: 25px 0;
 }
 
 .social-icon {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 30px; /* Adjust size */
-    height: 30px;
+    width: 35px; /* Adjust size */
+    height: 35px;
     border-radius: 50%;
     background: linear-gradient(to right, #004d00, #00b300);
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     cursor: pointer;
     text-decoration: none; /* Prevents default link styling */
     transition: background-color 0.3s ease; /* Smooth hover effect */
@@ -668,7 +668,7 @@
 
     <!-- Discover Section -->
     <div class="discover-container" id="discover-container">
-        <div class="discover-title">Discover</div>
+        <div class="discover-title">Explore</div>
         <div class="discover-scroll" id="discover-scroll"></div>
     </div>
 
@@ -723,7 +723,7 @@
         videoUrl: "https://iuptelegram.blogspot.com/2025/02/one.html",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "TSANTSAR SO",
-        category: "Action",
+        category: "Love at first sentence 📖💘",
         description: "A thrilling action-packed adventure.",
     },
     {
@@ -731,7 +731,7 @@
         videoUrl: "https://iuptelegram.blogspot.com/2025/02/full-screen-audio-playlist-reset.html",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "VIKING BATTLE OF HEIRS",
-        category: "Adventure",
+        category: "Best Novels",
         description: "Epic battles and heroic journeys.",
     },
     {
@@ -739,7 +739,7 @@
         videoUrl: "https://youtube.com/embed/3_i60BLtN_s",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "GUNS OF EDEN",
-        category: "Action",
+        category: "Battles & Empires 👑🥷",
         description: "A story of survival and redemption.",
     },
     {
@@ -747,7 +747,7 @@
         videoUrl: "https://youtube.com/embed/CumW3IY1mMg",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "GOD OF WAR",
-        category: "Action",
+        category: "Love at first sentence 📖💘",
         description: "The legend of a warrior's journey.",
     },
     {
@@ -755,7 +755,7 @@
         videoUrl: "https://youtube.com/embed/SFtKVKoscqA",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "CORA",
-        category: "Drama",
+        category: "Best Novels",
         description: "A heartwarming tale of love and loss.",
     },
     {
@@ -763,7 +763,7 @@
         videoUrl: "https://youtube.com/embed/hJzZRl1C8X0",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "JACK THE GIANT SLAYER",
-        category: "Adventure",
+        category: "Best Novels",
         description: "A classic tale of bravery and courage.",
     },
     {
@@ -771,7 +771,7 @@
         videoUrl: "https://youtube.com/embed/BjkncLAZu80",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "VIKING HUNTRESS",
-        category: "Action",
+        category: "Love at first sentence 📖💘",
         description: "A fierce warrior's quest for justice.",
     },
     {
@@ -779,7 +779,7 @@
         videoUrl: "https://youtube.com/embed/UPjyNg1mKAM",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "JURASSIC TRIANGLE",
-        category: "Sci-Fi",
+        category: "Battles & Empires 👑🥷",
         description: "A prehistoric adventure like no other.",
     },
     {
@@ -787,7 +787,7 @@
         videoUrl: "https://youtube.com/embed/iTNyJse9fdk",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "ALIEN INVASION",
-        category: "Sci-Fi",
+        category: "Dangerous Love 💔🔥",
         description: "Earth's last stand against an alien threat.",
     },
     {
@@ -795,7 +795,7 @@
         videoUrl: "https://youtube.com/embed/siFLpeqOWDQ",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "KNIGHT OF THE DEAD",
-        category: "🎧 Audio Novel",
+        category: "Dangerous Love 💔🔥",
         description: "A knight's battle against the undead.",
     },
     {
@@ -803,7 +803,7 @@
         videoUrl: "https://youtube.com/embed/Ma9xquhYyT0",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
         title: "GOATMAN",
-        category: "Complete",
+        category: "Dangerous Love 💔🔥",
         description: "A terrifying tale of a mythical creature.",
     }
 ];
@@ -927,7 +927,7 @@ const createDiscoverSection = () => {
         const unlockTime = localStorage.getItem(`${item.title}-unlock-time`);
         const currentTime = Date.now();
 
-        if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 10000) {
+        if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 7400000) {
             // Video is unlocked
             button.textContent = 'Read ✅';
             button.style.backgroundColor = '#00b300';
@@ -965,7 +965,7 @@ const createCategories = () => {
                 ${category}
                 <i class="fas fa-chevron-right"></i> <!-- Right arrow icon -->
             </span>
-            <button onclick="showAllVideos('${category}')">View All</button>
+            <button onclick="showAllVideos('${category}')"><i class="fas fa-th"></i> View All</button>
         `;
 
         // Make the entire title clickable
