--- a/Index.html
+++ b/Index.html
@@ -194,7 +194,7 @@
         }
         .discover-item {
             flex: 0 0 auto;
-            width: 150px;
+            width: 130px;
             background-color: #f0f0f0;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -212,14 +212,14 @@
             padding: 0px;
         }
         .discover-item .content h2 {
-            font-size: 0px;
+            font-size: 6px;
             margin: 0;
             color: #333;
         }
         .discover-item .content p {
-            font-size: 8px;
+            font-size: 0px;
             color: #777;
-            margin: 2px 0;
+            margin: 0px 0;
         }
         .discover-item button {
     background: linear-gradient(to right, #004d00, #00b300);
@@ -282,7 +282,7 @@
         
         .frame {
             flex: 0 0 auto;
-            width: 110px;
+            width: 112px;
             background-color: #f0f0f0;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -298,7 +298,7 @@
         .frame .content h2 {
             font-size: 8px;
             text-align: center;
-            margin-top: 2px;
+            margin-top: 1px;
         }
         .frame .content button {
             background: linear-gradient(to right, #004d00, #00b300);
@@ -613,6 +613,106 @@
        height: 100%;
        object-fit: cover;
    }
+   /* Bottom Navigation Bar */
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 12px 0;
+    border-radius: 15px;
+    background-color: #fff;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+footer .nav-icon {
+    flex: 1;
+    text-align: center;
+    color: #333;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    font-size: 9px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+footer .nav-icon i {
+    font-size: 20px;
+    transition: 0.3s;
+}
+
+footer .nav-icon.active,
+footer .nav-icon:hover {
+    color: #00b300;
+}
+
+footer .nav-icon.active i,
+footer .nav-icon:hover i {
+    transform: scale(1.2);
+}
+
+/* Modal for Video Navigation */
+.nav-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 2000;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-content {
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    border-radius: 12px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-header {
+    background-color: #333;
+    color: #fff;
+    padding: 8px;
+    text-align: right;
+    flex-shrink: 0;
+}
+
+.nav-header button {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.nav-body {
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.nav-body iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+/* Hide Footer */
+footer.hide {
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+}
 </style>
 </head>
 <body>
@@ -717,6 +817,38 @@
     </div>
 </div>
 
+<!-- Bottom Navigation Bar -->
+<footer>
+    <div class="nav-icon" onclick="openNovels('https://www.youtube.com/embed/VIDEO_ID_1')">
+        <i class="fas fa-clapperboard"></i>
+        <span>Kannywood</span>
+    </div>
+    <div class="nav-icon" onclick="showNavModal('https://www.youtube.com/embed/VIDEO_ID_2')">
+        <i class="fas fa-fire"></i>
+        <span>Trending</span>
+    </div>
+    <div class="nav-icon" onclick="showNavModal('https://www.youtube.com/embed/VIDEO_ID_3')">
+        <i class="fas fa-heart"></i>
+        <span>Favorites</span>
+    </div>
+    <div class="nav-icon" onclick="showNavModal('https://www.youtube.com/embed/VIDEO_ID_4')">
+        <i class="fas fa-user"></i>
+        <span>Profile</span>
+    </div>
+</footer>
+
+<!-- Modal for Video Navigation -->
+<div class="nav-container" id="nav-modal">
+    <div class="nav-content">
+        <div class="nav-header">
+            <button onclick="hideNavModal()">✖</button>
+        </div>
+        <div class="nav-body">
+            <iframe id="nav-iframe" src="" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
+
     <script>
         const data = [
     {
@@ -728,18 +860,18 @@
         description: "A thrilling action-packed adventure.",
     },
     {
-        imgUrl: "https://bit.ly/4fFLfwd",
-        videoUrl: "https://iuptelegram.blogspot.com/2025/02/full-screen-audio-playlist-reset.html",
+        imgUrl: "https://bitly.cx/JAxKn",
+        videoUrl: "https://iuptelegram.blogspot.com/2025/02/me-zanyi-da-ita.html",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
-        title: "VIKING BATTLE OF HEIRS",
+        title: "ME ZANYI DA ITA",
         category: "Best Novels",
         description: "Epic battles and heroic journeys.",
     },
     {
-        imgUrl: "https://bit.ly/3VRBV13",
+        imgUrl: "https://bitly.cx/0zlN",
         videoUrl: "https://youtube.com/embed/3_i60BLtN_s",
         adUrl: "https://www.profitablecpmrate.com/hz39pi8hu?key=b1e59314de7d94008170a99be19232cb",
-        title: "GUNS OF EDEN",
+        title: "DAME AKE ADO",
         category: "Battles & Empires 👑🥷",
         description: "A story of survival and redemption.",
     },
@@ -808,6 +940,40 @@
         description: "A terrifying tale of a mythical creature.",
     }
 ];
+
+// Function to show the navigation modal with a YouTube video
+function showNavModal(videoUrl) {
+    const navModal = document.getElementById('nav-modal');
+    const navIframe = document.getElementById('nav-iframe');
+
+    // Set the video URL in the iframe
+    navIframe.src = videoUrl;
+
+    // Show the modal
+    navModal.style.display = 'flex';
+}
+
+// Function to hide the navigation modal
+function hideNavModal() {
+    const navModal = document.getElementById('nav-modal');
+    const navIframe = document.getElementById('nav-iframe');
+
+    // Stop the video by clearing the iframe src
+    navIframe.src = '';
+
+    // Hide the modal
+    navModal.style.display = 'none';
+}
+
+const openOnDemand = () => {
+    window.open("https://i-tube-film.netlify.app/", "_blank");
+};
+
+const openNovels = () => {
+    window.open("https://your-novels-url.com", "_blank"); 
+};
+
+
 
 const logosData = [
        { imgUrl: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIlQrAhJwP4oyweBiy8rHJngSeN7E2_gNWQjtqKDOiRQ&s", videoUrl: "https://darulfikr.com/" },
@@ -1006,7 +1172,7 @@ const createFrame = (item) => {
     const unlockTime = localStorage.getItem(`${item.title}-unlock-time`);
     const currentTime = Date.now();
 
-    if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 10000) {
+    if (visited && unlockTime && (currentTime - parseInt(unlockTime)) < 7400000) {
         button.textContent = 'Open ✅';
         button.style.backgroundColor = '#00b300';
         img.onclick = () => openVideoNav(item.videoUrl, item.title);
@@ -1257,6 +1423,23 @@ setInterval(checkAndLockVideos, 7400000);
 createDiscoverSection();
 createCategories();
 updateHistoryList();
+
+let lastScrollTop = 0; // Track the last scroll position
+
+window.addEventListener('scroll', () => {
+    const footer = document.querySelector('footer');
+    const currentScrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+    if (currentScrollTop > lastScrollTop) {
+        // Scrolling down
+        footer.classList.add('hide'); // Hide footer
+    } else {
+        // Scrolling up
+        footer.classList.remove('hide'); // Show footer
+    }
+
+    lastScrollTop = currentScrollTop; // Update last scroll position
+});
 
 setTimeout(() => {
             document.getElementById('notification-bar').style.opacity = '1';
